--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "steps-recorder",
+  "website": "https://letsget.github.io/antd-table",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.8.0",
+    "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
     "nanoid": "^3.1.16",
     "react": "^17.0.1",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
